[metadata]
name = Caribou
version = 1.0.0
url = https://github.com/bioinfoUQAM/Caribou/wiki
author = Nicolas de Montigny
author_email = de_montigny.nicolas@courrier.uqam.ca
license = MIT license
license_files = file: LICENSE
description = Alignment-free bacterial classification in metagenomic shotguns
long_description = file: README.md

[options]
install_requires =
  absl-py==1.3.0
  aiohttp==3.8.3
  aiohttp-cors==0.7.0
  aiosignal==1.2.0
  anyio==3.6.2
  astunparse==1.6.3
  async-timeout==4.0.2
  attrs==22.1.0
  autopep8==1.6.0
  biopython==1.78
  blessed==1.19.1
  Bottleneck==1.3.5
  cachetools==5.2.0
  certifi==2022.12.7
  charset-normalizer==2.1.1
  click==8.1.3
  cloudpickle==2.2.0
  colorama==0.4.6
  colorful==0.5.4
  commonmark==0.9.1
  cycler==0.11.0
  dataclasses==0.8
  distlib==0.3.6
  filelock==3.8.0
  flatbuffers==22.10.26
  frozenlist==1.3.1
  fsspec==2022.10.0
  future==0.18.2
  gast==0.4.0
  google-api-core==2.10.2
  google-auth==2.13.0
  google-auth-oauthlib==0.4.6
  google-pasta==0.2.0
  googleapis-common-protos==1.56.4
  gpustat==1.0.0
  grpcio==1.43.0
  h5py==3.7.0
  idna==3.4
  importlib-metadata==5.0.0
  importlib-resources==5.10.0
  InSilicoSeq==1.5.4
  joblib==1.2.0
  jsonschema==4.16.0
  keras==2.10.0
  Keras-Preprocessing==1.1.2
  kiwisolver==1.4.2
  libclang==14.0.6
  Markdown==3.4.1
  MarkupSafe==2.1.1
  matplotlib==3.4.3
  mkl-fft==1.3.1
  mkl-random==1.2.2
  mkl-service==2.4.0
  msgpack==1.0.4
  multidict==6.0.2
  numexpr==2.8.4
  numpy==1.23.4
  nvidia-ml-py==11.495.46
  oauthlib==3.2.2
  olefile==0.46
  opencensus==0.11.0
  opencensus-context==0.1.3
  opt-einsum==3.3.0
  packaging==22.0
  pandas==1.5.2
  patsy==0.5.3
  Pillow==6.2.1
  pip==22.2.2
  pkgutil_resolve_name==1.3.10
  platformdirs==2.5.2
  prometheus-client==0.13.1
  protobuf==3.19.6
  psutil==5.9.3
  py-spy==0.3.14
  pyarrow==6.0.1
  pyasn1==0.4.8
  pyasn1-modules==0.2.8
  pycodestyle==2.8.0
  pydantic==1.10.2
  Pygments==2.13.0
  pyparsing==3.0.9
  pyrsistent==0.18.1
  pysam==0.19.1
  python-dateutil==2.8.2
  pytz==2022.7
  PyYAML==6.0
  ray==2.2.0
  redis==3.5.3
  requests==2.28.1
  requests-oauthlib==1.3.1
  rich==12.6.0
  rsa==4.9
  scikit-learn==1.1.3
  scipy==1.9.3
  seaborn==0.12.1
  setuptools==63.4.1
  shellingham==1.5.0
  six==1.16.0
  smart-open==6.2.0
  sniffio==1.3.0
  starlette==0.22.0
  statsmodels==0.13.2
  tabulate==0.9.0
  tensorboard==2.10.1
  tensorboard-data-server==0.6.1
  tensorboard-plugin-wit==1.8.1
  tensorboardX==2.5.1
  tensorflow==2.10.0
  tensorflow-estimator==2.10.0
  tensorflow-io-gcs-filesystem==0.27.0
  termcolor==2.0.1
  threadpoolctl==3.1.0
  toml==0.10.2
  tornado==6.1
  tqdm==4.64.1
  typing_extensions==4.4.0
  urllib3==1.26.12
  virtualenv==20.16.6
  wcwidth==0.2.5
  Werkzeug==2.2.2
  wheel==0.37.1
  wrapt==1.14.1
  yarl==1.8.1
  zipp==3.10.0
include_package_data = True
python_requires = >=3.8
scripts =
  src/Caribou_pipeline.py
  src/Caribou_kmers.py
  src/Caribou_extraction.py
  src/Caribou_classification.py
  src/Caribou_extraction_train_cv.py
  src/Caribou_classification_train_cv.py
  src/Caribou_outputs.py
  src/supplement/caribou.R
  src/supplement/simulation.py
  src/supplement/sklearn_tuning.py
  data/subset_classes.py
  data/subset_merge.py

[options.package_data]
KMC =
  src/data/KMC/bin/*
  src/data/KMC/include/kmc_runner.h
faSplit =
  src/data/faSplit
KronaTools =
  src/outputs/KronaTools/img/*
  src/outputs/KronaTools/lib/*
  src/outputs/KronaTools/scripts/*
  src/outputs/KronaTools/rsc/*
  src/outputs/KronaTools/*
