[metadata]
name = Caribou
version = 1.2.0
url = https://github.com/bioinfoUQAM/Caribou/wiki
author = Nicolas de Montigny
author_email = de_montigny.nicolas@courrier.uqam.ca
license = MIT license
license_files = file: LICENSE
description = Alignment-free bacterial classification in metagenomic shotguns
long_description = file: README.md

[options]
install_requires =
  setuptools
  wheel
  grpcio==1.48.2
  ray[default]==2.2.0
  pydantic<2
  pyarrow>=6.0.1,!=7
  keras>=2.0.0
  tensorflow>=2.0.0
  numpy>=1.16
  pandas>=1.3.0
  scikit-learn>=1.1.2
  scipy
  insilicoseq
  biopython==1.78
  tqdm
  cloudpickle
  tune-sklearn
include_package_data = True
python_requires = >=3.8
scripts =
  src/Caribou_pipeline.py
  src/Caribou_kmers.py
  src/Caribou_extraction.py
  src/Caribou_classification.py
  src/Caribou_extraction_train_cv.py
  src/Caribou_classification_train_cv.py
  src/Caribou_outputs.py
  src/supplement/caribou.R
  src/supplement/simulation.py
  src/supplement/sklearn_tuning.py
  data/subset_classes.py
  data/subset_merge.py

[options.package_data]
KMC =
  src/data/KMC/bin/*
  src/data/KMC/include/kmc_runner.h
faSplit =
  src/data/faSplit
KronaTools =
  src/outputs/KronaTools/img/*
  src/outputs/KronaTools/lib/*
  src/outputs/KronaTools/scripts/*
  src/outputs/KronaTools/rsc/*
  src/outputs/KronaTools/*
