[metadata]
name = Caribou
version = 1.4.1
url = https://github.com/bioinfoUQAM/Caribou/wiki
author = Nicolas de Montigny
author_email = de_montigny.nicolas@courrier.uqam.ca
license = MIT license
license_files = file: LICENSE
description = Alignment-free bacterial classification in metagenomic shotguns
long_description = file: README.md

[options]
install_requires =
  biopython>=1.79
  cloudpickle>=2.2.1
  InSilicoSeq==1.6.0
  keras==2.14
  numpy==1.26
  pandas==2.0.1
  ray==2.6.3
  scikit-learn==1.3.0
  tensorflow==2.14
  pyarrow==12.0.1
  tqdm
include_package_data = True
python_requires = >=3.8
scripts =
  src/Caribou_pipeline.py
  src/Caribou_kmers.py
  src/Caribou_reduce_features.py
  src/Caribou_simulate_test_val.py
  src/Caribou_dimensions_decomposition.py
  src/Caribou_extraction.py
  src/Caribou_classification.py
  src/Caribou_extraction_train_cv.py
  src/Caribou_classification_train_cv.py
  src/Caribou_outputs.py
  src/supplement/simulation.py
  src/supplement/sklearn_tuning.py
  data/subset_classes.py
  data/subset_merge.py

[options.package_data]
KronaTools =
  src/outputs/KronaTools/img/*
  src/outputs/KronaTools/lib/*
  src/outputs/KronaTools/scripts/*
  src/outputs/KronaTools/rsc/*
  src/outputs/KronaTools/*
